--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ image = "0.24.7"
 ndarray = "0.15.6"
 num-traits = "0.2.17"
 serde = { version = "1.0.189", features = ["derive"] }
+sprs = "0.11.1"
